--- a/design-patterns/pom.xml
+++ b/design-patterns/pom.xml
@@ -8,6 +8,11 @@
   <name>design-patterns</name>
   <url>http://maven.apache.org</url>
 
+   <properties>
+       <instruction.coverage.ratio>0.90</instruction.coverage.ratio>
+       <class.coverage.ratio>0.60</class.coverage.ratio>
+   </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -40,7 +45,7 @@
                                         <limit>
                                             <counter>INSTRUCTION</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.99</minimum>
+                                            <minimum>${instruction.coverage.ratio}</minimum>
                                         </limit>
                                         <limit>
                                             <counter>CLASS</counter>
@@ -55,7 +60,7 @@
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.99</minimum>
+                                            <minimum>${class.coverage.ratio}</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
